# youtube-transcript-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: COMPLIANCE.md  DESIGN.md  PHASE_0_7_8_BUILD.md  PHASE_1_BUILD.md  PHASE_5_6_BUILD.md  SECURITY_REVIEW.md  SLO.md  UI_SCOPE.md
src/transcript_tool/: __init__.py  asr_eval.py  bakeoff.py  cache.py  cancellable.py  cli.py  discover.py  locking.py  media.py  normalize.py  orchestrator.py  policy.py  preflight.py  profiles.py  provisioning.py  quality.py  schema.py  security.py
src/transcript_tool/strategies/: _stubs.py  api_captions.py  base.py  local_whisper.py  managed.py  uploaded_caption.py  ytdlp_subs.py
src/transcript_tool/web/: __init__.py  app.py  copy.py  jobs.py  markdown.py  parse.py  worker.py
src/transcript_tool/web/templates/: _validation.html  index.html  job.html  results.html
tests/: test_api_captions.py  test_bakeoff.py  test_cache.py  test_cancellable.py  test_discover.py  test_failure_injection.py  test_jobs.py  test_local_whisper.py  test_locking.py  test_managed.py  test_normalize_vtt.py  test_pipeline.py  test_policy_hash.py  test_profile.py  test_quality_gates.py  test_srt.py  test_web.py  test_worker.py  test_ytdlp_subs.py
tests/fixtures/: basic.srt  chorus_repeat.vtt  inverted_timestamps.vtt  rolling_autocaption.srt  rolling_autocaption.vtt
